# waterfall

./: LICENSE  README.md  check_code.cmd  client.py  index.html  providers.py  pyproject.toml  requirements.txt  server.py  setup.py  test_code.cmd  test_code.sh  waterfall.py
.github/workflows/: test.yaml  test_code.cmd  test_code.sh
static/: URI.js  index.html
waterfall/: __init__.py  __main__.py  client.py  providers.py  server.py
